--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{% block title %}{% endblock %}Falai</title>
+        <title>{% block title %}{% endblock %} | Falai</title>
 
         <script src="https://cdn.tailwindcss.com"></script>
 
