--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -28,11 +28,11 @@
                 {% if request.user.is_authenticated %}
                 <a href="/rooms/" class="text-white hover:text-gray-200">Rooms</a>
 
-                <a href="/logout/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Log out</a>
+                <a href="{% url 'logout' %}" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Logout</a>
                 {% else %}
-                <a href="/login/" class="text-white hover:text-gray-200">Log in</a>
+                <a href="{% url 'login' %}" class="text-white hover:text-gray-200">Login</a>
 
-                <a href="/signup/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Sign up</a>
+                <a href="{% url 'signup' %}" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Sign up</a>
                 {% endif %}
             </div>
         </nav>
