--- a/rooms/templates/core/base.html
+++ b/rooms/templates/core/base.html
@@ -22,16 +22,18 @@
         <nav class="flex items-center justify-between px-4 py-6 bg-teal-800">
             <div>
                 <a href="/" class="text-xl text-white">Falai</a>
+                {% if request.user.is_authenticated %}
+                <a class="text-white hover:text-gray-200"> - {{request.user.username}}</a>
+                {% endif %}
             </div>
 
             <div class="flex items-center space-x-4">
                 {% if request.user.is_authenticated %}
-                <a href="/rooms/" class="text-white hover:text-gray-200">Rooms</a>
-
+                <a href="{% url 'rooms_list' %}" class="text-white hover:text-gray-200">Rooms</a>
                 <a href="{% url 'logout' %}" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Logout</a>
+
                 {% else %}
                 <a href="{% url 'login' %}" class="text-white hover:text-gray-200">Login</a>
-
                 <a href="{% url 'signup' %}" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Sign up</a>
                 {% endif %}
             </div>
