--- a/rooms/templates/rooms/detailed_room.html
+++ b/rooms/templates/rooms/detailed_room.html
@@ -41,7 +41,7 @@
     );
 
     chatSocket.onclose = function(e) {
-        console.log('onclose')
+        console.log('closing connection')
     }
 
     chatSocket.onmessage = function(e) {
